public interface IInteractable
{
    public void Interact();
    public bool IsBusy();
}